--- a/index.html
+++ b/index.html
@@ -138,7 +138,11 @@
 <body>
 	<br>
 	<center>
-		<span style="font-size:36px">Masked Diffusion Models are Fast and Privacy-aware Learners</span>
+		<div style="height:350px; padding:150px 0px 50px 0px;background-image: url('./resources/background.png')">
+
+			<h1>Masked Diffusion Models are Fast and Privacy-aware Learners</h1>
+			
+		</div>
 		<table align=center width=600px>
 			<table align=center width=600px>
 				<tr>
@@ -287,14 +291,14 @@
 	</table>
 	<br>
 	<hr>
-	<table align=center width=450px>
-		<center><h1>Paper and Supplementary Material</h1></center>
+	<table align=center width=800px>
+		<center><h1>Paper</h1></center>
 		<tr>
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
-			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
-				<b>Creative and Descriptive Paper Title.</b><br>
-				In Conference, 20XX.<br>
-				(hosted on <a href="">ArXiv</a>)<br>
+			<td><span style="font-size:14pt">Jiachen Lei, Peng Cheng, Zhongjie Ba*, Kui Ren<br>
+				<b>Masked Diffusion Models are Fast and Privacy-aware Learners</b><br>
+				<!-- In Conference, 20XX.<br> -->
+				<!-- (hosted on <a href="">ArXiv</a>)<br> -->
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
@@ -303,14 +307,6 @@
 	</table>
 	<br>
 
-	<table align=center width=600px>
-		<tr>
-			<td><span style="font-size:14pt"><center>
-				<a href="./resources/bibtex.txt">[Bibtex]</a>
-			</center></td>
-		</tr>
-	</table>
-
 	<hr>
 	<br>
 
@@ -318,8 +314,15 @@
 		<tr>
 			<td width=400px>
 				<left>
-					<!-- <center><h1>Acknowledgements</h1></center>
-					This template was originally made by <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> and <a href="http://richzhang.github.io/">Richard Zhang</a> for a <a href="http://richzhang.github.io/colorization/">colorful</a> ECCV project; the code can be found <a href="https://github.com/richzhang/webpage-template">here</a>. -->
+					<center><h1>Citation</h1></center>
+					<pre>
+						@article{lei2023masked,
+							title={Masked Diffusion Models are Fast and Privacy-aware Learners},
+							author={Lei, Jiachen and Cheng, Peng and Ba, Zhongjie and Ren, Kui},
+							journal={arXiv preprint arXiv:2306.11363},
+							year={2023}
+						  }
+					</pre>
 				</left>
 			</td>
 		</tr>
@@ -328,9 +331,9 @@
 
 	<table align=center width=900px>
 		<tr>
-			<td width=400px>
+			<td width=900px>
 				<left>
-					Acknowledgements: This template was originally made by <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> and <a href="http://richzhang.github.io/">Richard Zhang</a> for a <a href="http://richzhang.github.io/colorization/">colorful</a> ECCV project; the code can be found <a href="https://github.com/richzhang/webpage-template">here</a>.
+					Acknowledgements: This template was originally made by <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> and <a href="http://richzhang.github.io/">Richard Zhang</a> .
 				</left>
 			</td>
 		</tr>
