--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 	<table align=center width=800px>
 		<center><h1>Paper</h1></center>
 		<tr>
-			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
+			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/maskdm_paper.png"/></a></td>
 			<td><span style="font-size:14pt">Jiachen Lei, Peng Cheng, Zhongjie Ba*, Kui Ren<br>
 				<b>Masked Diffusion Models are Fast and Privacy-aware Learners</b><br>
 				<!-- In Conference, 20XX.<br> -->
