--- a/index.html
+++ b/index.html
@@ -138,10 +138,8 @@
 <body>
 	<br>
 	<center>
-		<div style="height:350px; padding:150px 0px 50px 0px;background-image: url('./resources/background.png')">
-
+		<div style="height:100px; padding:50px 0px 0px 0px;">
 			<h1>Masked Diffusion Models are Fast and Privacy-aware Learners</h1>
-			
 		</div>
 		<table align=center width=600px>
 			<table align=center width=600px>
@@ -294,17 +292,22 @@
 	<table align=center width=800px>
 		<center><h1>Paper</h1></center>
 		<tr>
-			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/maskdm_paper.png"/></a></td>
-			<td><span style="font-size:14pt">Jiachen Lei, Peng Cheng, Zhongjie Ba*, Kui Ren<br>
-				<b>Masked Diffusion Models are Fast and Privacy-aware Learners</b><br>
-				<!-- In Conference, 20XX.<br> -->
-				<!-- (hosted on <a href="">ArXiv</a>)<br> -->
-				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
-				<span style="font-size:4pt"><a href=""><br></a>
-				</span>
-			</td>
+			<td><a href=""><img class="paper-big" style="height:300px" src="./resources/maskdm_paper.png"/></a></td>
 		</tr>
 	</table>
+		<div>
+			<table>
+				<tr style="margin-bottom:50px">
+					<p><b>Masked Diffusion Models are Fast and Privacy-aware Learners</b></p>
+				</tr>
+				<tr>
+					<p style="font-size:14pt">Jiachen Lei, Peng Cheng, Zhongjie Ba*, Kui Ren</p>
+				</tr>
+			</table>
+			<span style="font-size:4pt"><a href=""><br></a>
+			</span>
+		</div>
+
 	<br>
 
 	<hr>
