--- a/index.html
+++ b/index.html
@@ -197,21 +197,14 @@
 		</table>
 	</center>
 
-	<center>
-		<table align=center width=850px>
-			<tr>
-				<td width=260px>
-					<center>
-						<img class="round" style="width:500px" src="./resources/zju.png"/>
-					</center>
-				</td>
-				<td width=260px>
-					<p style="font-size:60px; font-weight:800">ICSR</p>
-				</td>
-			</tr>
-		</table>
 
-	</center>
+			
+	<div style="display:flex; width:850px">
+		<img style="width:200px" src="./resources/zju.png"/>
+		<p style="font-size:75px; font-weight:800">ICSR</p>
+	</div>
+
+
 
 	<hr>
 
@@ -299,13 +292,13 @@
 	</table>
 	<br>
 	<hr>
+	<center><h1>Paper</h1></center>
 	<div style="display:flex">
-		<table align=center width=400px>
-			<center><h1>Paper</h1></center>
-			<tr>
-				<td><a href=""><img class="paper-big" style="height:300px" src="./resources/maskdm_paper.png"/></a></td>
-			</tr>
-		</table>
+
+		<div style="width:400px">
+			<a href=""><img class="paper-big" style="height:300px" src="./resources/maskdm_paper.png"/></a>
+		</div>
+
 		<div>
 			<table>
 				<tr style="margin-bottom:50px">
