--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
 
 			
-	<div style="display:flex; width:850px">
+	<div style="display:flex; width:850px; margin-left: 300px">
 		<img style="width:200px" src="./resources/zju.png"/>
 		<p style="font-size:75px; font-weight:800">ICSR</p>
 	</div>
