--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 	<br>
 	<hr>
 	<center><h1>Paper</h1></center>
-	<div style="display:flex">
+	<div style="display:flex; width:850px; margin-left:150px">
 
 		<div style="width:400px">
 			<a href=""><img class="paper-big" style="height:300px" src="./resources/maskdm_paper.png"/></a>
