--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 		text-decoration: none;
 	}
 	a:hover {
-		color: #002F68;
+		background-color: #005FA8;
 	}
 </style>
 
@@ -158,48 +158,49 @@
 
 <body>
 	<br>
-	<center>
-		<div style="height:100px; padding:50px 0px 0px 0px;">
-			<h1>Masked Diffusion Models are Fast and Privacy-aware Learners</h1>
-		</div>
-		<table align=center width=600px>
+	<div>
+		<center>
+			<div style="height:100px; padding:50px 0px 0px 0px;">
+				<h1>Masked Diffusion Models are Fast and Privacy-aware Learners</h1>
+			</div>
 			<table align=center width=600px>
-				<tr>
-					<td align=center width=100px>
-						<center>
-							<span style="font-size:24px"><a href="https://jiachenlei.github.io">Jiachen Lei</a></span>
-						</center>
-					</td>
-					<td align=center width=100px>
-						<center>
-							<span style="font-size:24px">Peng Cheng</span>
-						</center>
-					</td>
-					<td align=center width=100px>
-						<center>
-							<span style="font-size:24px">Zhongjie Ba*</span>
-						</center>
-					</td>
-					<td align=center width=100px>
-						<center>
-							<span style="font-size:24px">Kui Ren</span>
-						</center>
-					</td>
-				</tr>
+				<table align=center width=600px>
+					<tr>
+						<td align=center width=100px>
+							<center>
+								<span style="font-size:24px"><a href="https://jiachenlei.github.io">Jiachen Lei</a></span>
+							</center>
+						</td>
+						<td align=center width=100px>
+							<center>
+								<span style="font-size:24px">Peng Cheng</span>
+							</center>
+						</td>
+						<td align=center width=100px>
+							<center>
+								<span style="font-size:24px">Zhongjie Ba*</span>
+							</center>
+						</td>
+						<td align=center width=100px>
+							<center>
+								<span style="font-size:24px">Kui Ren</span>
+							</center>
+						</td>
+					</tr>
+				</table>
+				
 			</table>
-			
-		</table>
-	</center>
+		</center>
 
 
-	<div style="display:flex; width:850px; margin: 25px 0 0 350px">
-		<img style="width:200px;height:100px" src="./resources/zju.png"/>
-		<p style="font-size:55px; font-weight:800; margin:8px 0 0 20px;">ICSR</p>
+		<div style="display:flex; width:850px; margin: 25px 0 0 350px">
+			<img style="width:200px;height:100px" src="./resources/zju.png"/>
+			<p style="font-size:55px; font-weight:800; margin:8px 0 0 20px;">ICSR</p>
+		</div>
 	</div>
 
-
 	<div>
-		<table align=center width=250px>
+		<table align=center width=250px style="margin-top: 40px; margin-bottom: 40px">
 			<tr>
 				<td align=center width=120px>
 					<center>
@@ -218,6 +219,10 @@
 		</table>
 	</div>
 
+	<div style="width:850px">
+		<img style="width:100px; margin-left:400px"  src="./resources/intro.png"/>
+
+	</div>
 	<hr>
 
 	<table align=center width=850px>
