--- a/index.html
+++ b/index.html
@@ -219,9 +219,14 @@
 		</table>
 	</div>
 
-	<div style="width:850px">
-		<img style="width:100px; margin-left:400px"  src="./resources/intro.png"/>
-
+	<div style="width:850px; text-align:justify">
+		<img style="width:400px; margin-left:250px"  src="./resources/intro.png"/>
+		<p style="margin-left:200px"> 
+			Pre-training paradigm proposed in MaskDM. The noisy input is masked and then fed into the model.
+			Only visible areas are denoised.
+			After pre-training, the model is subsequently fine-tuned via conventional denoising training.
+		
+		</p>
 	</div>
 	<hr>
 
