--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 	</div>
 
 	<div style="width:850px; text-align:justify">
-		<img style="width:400px; margin-left:250px"  src="./resources/intro.png"/>
-		<p style="margin-left:200px"> 
+		<img style="width:400px; margin-left:350px"  src="./resources/intro.png"/>
+		<p style="margin-left:150px; width: 800px;font-size: 16px"> 
 			Pre-training paradigm proposed in MaskDM. The noisy input is masked and then fed into the model.
 			Only visible areas are denoised.
 			After pre-training, the model is subsequently fine-tuned via conventional denoising training.
@@ -317,7 +317,7 @@
 	<center><h1>Paper</h1></center>
 	<div style="display:flex; width:850px; margin-left:150px">
 
-		<div style="width:400px">
+		<div style="width:300px">
 			<a href=""><img class="paper-big" style="height:300px" src="./resources/maskdm_paper.png"/></a>
 		</div>
 
