--- a/index.html
+++ b/index.html
@@ -117,10 +117,11 @@
 
 	.btn {
 		width: 100px;
+		display: block;
 		/* height: 150px; */
 		padding: 12px 12px 12px 12px;
 		font-size: 20px;
-		margin-top: 20px;
+		margin-top: 10px;
 		border-radius: 6px;
 		color: white !important;
 		font-weight: 600;
@@ -200,18 +201,18 @@
 	</div>
 
 	<div>
-		<table align=center width=250px style="margin-top: 40px; margin-bottom: 40px">
+		<table align=center width=250px style="margin-top: 20px; margin-bottom: 40px">
 			<tr>
-				<td align=center width=120px>
+				<td align=center width=200px>	
 					<center>
 
-						<a style="margin-right:20px" class="btn"  href='https://arxiv.org/abs/2306.11363'>Paper</a>
+						<a style="margin-right:40px" class="btn"  href='https://arxiv.org/abs/2306.11363'>Paper</a>
 
 					</center>
 				</td>
-				<td align=center width=120px>
+				<td align=center width=200px>
 					<center>
-						<a style="margin-left:20px" class="btn" href='https://github.com/jiachenlei/maskdm'>GitHub</a>
+						<a style="margin-left:40px" class="btn" href='https://github.com/jiachenlei/maskdm'>GitHub</a>
 
 					</center>
 				</td>
