--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 		</center>
 
 
-		<div style="display:flex; width:850px; margin: 25px 0 0 350px">
+		<div style="display:flex; width:850px; margin: 25px 0 0 370px">
 			<img style="width:200px;height:100px" src="./resources/zju.png"/>
-			<p style="font-size:55px; font-weight:800; margin:8px 0 0 20px;">ICSR</p>
+			<p style="font-size:65px; color:#003F88; font-weight:800; margin:-2px 0 0 5px;">ICSR</p>
 		</div>
 	</div>
 
