--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 	</table>
 	<hr> -->
 
-	<center><h1>Code</h1></center>
+	<!-- <center><h1>Code</h1></center>
 
 	<table align=center width=420px>
 		<center>
@@ -314,7 +314,7 @@
 		</span>
 	</table>
 	<br>
-	<hr>
+	<hr> -->
 	<center><h1>Paper</h1></center>
 	<div style="display:flex; width:850px; margin-left:150px">
 
